se realiza el estilo de la pantalla de login

--- a/primera-app-fx/pom.xml
+++ b/primera-app-fx/pom.xml
@@ -10,6 +10,7 @@
     <name>mi-app-fx</name>
 
     <properties>
+    <javafx-maven-plugin.version>0.0.10</javafx-maven-plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
