--- a/primera-app-fx/pom.xml
+++ b/primera-app-fx/pom.xml
@@ -22,6 +22,12 @@
     </properties>
 
     <dependencies>
+      <!-- Librería para manejar JSON -->
+    <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>2.15.0</version>
+        </dependency>
         <!-- Dependencias de JavaFX -->
         <dependency>
             <groupId>org.openjfx</groupId>
