se realiza la documentacion del codigo y se corrigen errores

--- a/primera-app-fx/src/main/resources/idioma-en.properties
+++ b/primera-app-fx/src/main/resources/idioma-en.properties
@@ -2,9 +2,9 @@ textUsuario=Name
 textContrasenia=Password
 openRegistrarButton.text=Register
 aceptarButton.text=Accept
-buttonRecuperarContraseña.text=Forgot your password?
+buttonRecuperarContrasenia.text=Forgot your password?
 login.mensaje.campos=⚠️ All fields are required.
-login.mensaje.bienvenido=✅ Welcome.
+login.mensaje.bienvenido=✅ Bienvenido, {0}.
 login.mensaje.incorrecto=❌ Invalid username or password.
 
 
