--- a/primera-app-fx/src/main/resources/idioma-es.properties
+++ b/primera-app-fx/src/main/resources/idioma-es.properties
@@ -2,9 +2,9 @@ textUsuario=Usuario
 textContrasenia=Contraseña
 openRegistrarButton.text=Registrarte
 aceptarButton.text=Aceptar
-buttonRecuperarContraseña.text=¿Olvidaste tu contraseña?
+buttonRecuperarContrasenia.text=¿Olvidaste tu contraseña?
 login.mensaje.campos=⚠️ Todos los campos son obligatorios.
-login.mensaje.bienvenido=✅ Bienvenido.
+login.mensaje.bienvenido=✅ Bienvenido, {0}.
 login.mensaje.incorrecto=❌ Usuario o contraseña incorrectos.
 
 
