--- a/primera-app-fx/src/main/resources/idioma-fr.properties
+++ b/primera-app-fx/src/main/resources/idioma-fr.properties
@@ -2,9 +2,9 @@ textUsuario=Nom d'utilisateur
 textContrasenia=Mot de passe
 openRegistrarButton.text=Inscription
 aceptarButton.text=Accepter
-buttonRecuperarContraseña.text=Mot de passe oublié ?
+buttonRecuperarContrasenia.text=Mot de passe oublié?
 login.mensaje.campos=⚠️ Tous les champs sont obligatoires.
-login.mensaje.bienvenido=✅ Bienvenue.
+login.mensaje.bienvenido=✅ Bienvenue, {0}.
 login.mensaje.incorrecto=❌ Nom d'utilisateur ou mot de passe incorrect.
 
 buttonVolverLogin.text=Retour
